Doc adherent sans le body de avatar
